Tue Nov 18 07:49:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/acedefaults.mpb:
          Enable macro_for_lib_modifier for vc71

Tue Nov 18 07:32:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-mingw.h:
          Fixed compile problem

Mon Nov 17 16:09:06 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Set LIB_PREFIX earlier on so that the VxWorks included makefiles
          work properly (with VXWORKSLINK).

        * include/makeinclude/rules.lib.GNU:

          Removed reference to old "LIB" macro.

Mon Nov 17 13:47:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled a test for Labview/WinCE/FUZZ

Mon Nov 17 13:34:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/run_test.txt:
          First step to update this to the new testframework

Mon Nov 17 12:54:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Enabled a set of tests for Labview/WinCE/FUZZ

Mon Nov 17 12:29:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Disabled bug 1636 for corba/e and minimum corba

Mon Nov 17 12:02:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Moved PICurrent_NameService to the other list

Mon Nov 17 11:56:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled a set of tests for Labview/WinCE/FUZZ

Mon Nov 17 11:55:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget.pm:
          Added AddLibPath

        * bin/fuzz.pl:
          Mark PerlACE::add_lib_path as error, we shuld use AddLibPath on
          the target from now

Mon Nov 17 11:28:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
